Closed Bug 596769 Opened 15 years ago Closed 15 years ago

ShadowLayers not expecting Layer create/destruction during transaction

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: romaxa, Assigned: romaxa)

References

Details

Attachments

(1 file)

Plugin-Layers code is making one Remote Layers bug reproducible. Shadow layers not Holding layer during transaction av we endup with ShadowLayerParent::ActorDestroy mLayer == null #0 0x4004577c in raise (sig=11) at ../nptl/sysdeps/unix/sysv/linux/pt-raise.c:45 #1 0x40317eb4 in nsProfileLock::FatalSignalHandler (signo=11, info=0xbeffd178, context=0xbeffd1f8) at nsProfileLock.cpp:213 #2 <signal handler called> #3 0x4115c0cc in mozilla::layers::ShadowLayerParent::ActorDestroy (this=0x48cbc840, why=mozilla::ipc::IProtocolManager<mozilla::ipc::RPCChannel::RPCListener>::Deletion) at gfx/layers/ipc/ShadowLayerParent.cpp:79 #4 0x40f4a704 in mozilla::layers::PLayerParent::DestroySubtree (this=0x0, why=mozilla::ipc::IProtocolManager<mozilla::ipc::RPCChannel::RPCListener>::Deletion) at PLayerParent.cpp:287 #5 0x40f4ab00 in mozilla::layers::PLayerParent::OnMessageReceived (this=0x48cbc840, __msg=<value optimized out>) at PLayerParent.cpp:88 #6 0x40f43398 in mozilla::dom::PContentParent::OnMessageReceived (this=0x4464f9c0, __msg=...) at PContentParent.cpp:367 #7 0x40f1685c in mozilla::ipc::AsyncChannel::OnDispatchMessage (this=0x4464f9c8, msg=...) at ipc/glue/AsyncChannel.cpp:262 #8 0x40f1cdbc in mozilla::ipc::RPCChannel::OnMaybeDequeueOne (this=0x4464f9c8) at ipc/glue/RPCChannel.cpp:438 ---Type <return> to continue, or q <return> to quit---
Attached patch Fast fixSplinter Review
Assignee: nobody → romaxa
Status: NEW → ASSIGNED
Attachment #475668 - Flags: review?(jones.chris.g)
Ah and this is reproducible only with plugin layer patch... therefore we need to get this landed to make plugin-layers stuff working on cedar.( remote layers )
Blocks: 556487
Comment on attachment 475668 [details] [diff] [review] Fast fix FTR, this is the correct fix, not just a "fast fix." This code didn't just wasn't prepared for layers to be created and destroyed in the same transaction.
Attachment #475668 - Flags: review?(jones.chris.g) → review+
Comment on attachment 475668 [details] [diff] [review] Fast fix small and safe fix.
Attachment #475668 - Flags: approval2.0+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: