Bug 596769 - ShadowLayers not expecting Layer create/destruction during transaction. r=jones.chris.g a=approval2.0